fix vfeed name text align

--- a/tt-rss.css
+++ b/tt-rss.css
@@ -874,6 +874,10 @@ td.hlMarkedPic, td.hlSelectRow, td.hlUpdated, td.hlFeed {
 	height : 1em;
 }
 
+td.hlFeed {
+	text-align : right;
+}
+
 div.cdmArticle {
 	border : 1px solid #f0f0f0;
 	background-color : #fafafa;
